<resources>
    <string name="app_name">باشگاه مشتریان گالری مشکات</string>

    <string name="title_activity_ticket">Book Ticket</string>
    <string name="lbl_duration">توضیحات</string>
    <string name="lbl_genre">آخرین تاریخ خرید</string>
    <string name="lbl_rating">تعداد خریدها تاکنون</string>
    <string name="lbl_price">کل مبلغ خرید</string>
    <string name="btn_buy_now">ثبت خرید جدید</string>
    <string name="btn_coming_soon">بزودی</string>
    <string name="msg_no_ticket_found">No ticket found. Try scanning the QR Codes from http://api.androidhive.info/QR Codes/</string>
    <string name="scan_qr_code">بارکدی را اسکن کنید</string>
    <string name="main_activity_bottom_logo">با اسکن کارت ها و یا جستجو تلفن، به اطلاعات و تاریخچه خرید مشتریان خود دسترسی پیدا کنید</string>
    <string name="name_family">نام و نام خانوادگی</string>
    <string name="tel">شماره تلفن</string>
    <string name="desc">توضیحات</string>
    <string name="crated_at"> ساخته شده در تاریخ </string>
    <string name="format_price">تومان</string>
    <string name="order_price">مبلغ خرید</string>
    <string name="order_date">تاریخ خرید</string>
    <string name="msg_copied_clipboard">کپی شد</string>
    <string name="edite">ویرایش</string>
    <string name="order_list">تاریخچه خریدها</string>
    <string name="desc_need_permission">برای اسکن بارکد و ارائه خدمات، اجازه دسترسی به دوربین نیاز داریم</string>
    <string name="ok_permission">باشه</string>
    <string name="exit_app">خروج از برنامه</string>


</resources>
